k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: paper2codes
  labels:
    name: paper2codes
    environment: production
